default.css
/* ... */
.card[data-type="Actor"] .cardImageContainer::after {
  content: "";
  background: linear-gradient(360deg, rgba(0, 0, 0, 0.75), transparent 70%);
  width: 100%;
  bottom: 0;
  position: absolute;
  padding-top: 100%;
}

.card[data-type="Actor"] .cardText-secondary {
  bottom: 0%;
  width: -webkit-fill-available;
  border-radius: 0px 0px 10px 10px;
  height: 22px;
}

.card[data-type="Actor"] .cardText-first {
  bottom: 23.5px;
  width: -webkit-fill-available;
  height: 22px;
}

.cardDefaultText {
  opacity: 1 !important;
}

.layout-mobile .card[data-type="Actor"] .cardText-first {
  color: white !important;
}

.card[data-type="Actor"] .cardScalable {
  overflow: hidden;
  border-radius: var(--rounding);
  height: 3rem;
}

.card[data-type="Actor"] .cardOverlayButton-br {
  position: absolute;
  bottom: 23% !important;
  right: 0 !important;
}

.card[data-type="Actor"] .cardPadder {
  background: none;
}

.card[data-type="Actor"] .cardImageIcon {
  bottom: 41%;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}

select {
  box-shadow: 0 0 6px 0px black !important;
  background: rgba(0, 0, 0, 0.2) !important;
  -webkit-backdrop-filter: none !important;
  backdrop-filter: none !important;
  text-shadow: 0 0 5px black !important;
}

.detailPagePrimaryContainer.padded-left.padded-right.detailRibbon,
button.button-flat.btnResume.detailButton.emby-button,
h2 {
  text-shadow: 0 0 5px black;
}

.tmla-mask {
  background: linear-gradient(to right, black, transparent);
}

.dialogBackdrop {
  background-color: #0000;
}

.listItem:hover {
  background: black;
}

.listItem {
  transition: transform 0.2s, background 0.2s, border-color 0.2s;
}

.layout-mobile .listItem {
  flex-wrap: wrap !important;
  padding: 0 !important;
  margin: 0;
}

/* Adjust both "size-adjust" and "size" to modify size */

.headerTabs.sectionTabs {
  -webkit-text-size-adjust: 130%;
  -moz-text-size-adjust: 130%;
  -ms-text-size-adjust: 130%;
  text-size-adjust: 130%;
  font-size: 130%;
}

.emby-tab-button.emby-tab-button-active::after {
  transform: scale(1);
}

.emby-tab-button::after {
  content: "";
  width: calc(100% - 2em);
  position: absolute;
  height: 4px;
  background: var(--accent);
  border-radius: 10px;
  transform: scaleX(0);
  transition: 0.2s;
  left: 1em;
  bottom: 0.75em;
  right: 1em;
}

@media (min-width: 100em) {
  .headerTabs {
    margin-top: -3.3em;
  }
}

.emby-tab-button {
  position: relative;
  padding: 1em;
  color: white;
  font-size: 1.1em;
  -webkit-filter: drop-shadow(2px 4px 6px rgb(20, 20, 20));
  filter: drop-shadow(2px 4px 6px rgb(20, 20, 20));
}

.emby-tab-button:hover::after {
  transform: scale(1);
}

.pageTitle {
  margin-top: auto;
  margin-bottom: auto;
}

/*Blur backdrops, feel free to edit the intensity of the filter values*/

.backdropContainer {
  display: none !important;
}

.backgroundContainer.withBackdrop {
  opacity: 1;
  z-index: -1;
  background-color: rgb(20, 20, 20);
}

.backgroundContainer {
  background-color: rgb(20, 20, 20) !important;
}

/*Rounded corners and square hover buttons*/

.cardContent-button,
.cardContent-shadow,
.itemDetailImage,
.cardOverlayContainer,
.cardPadder,
.listItemImage,
.listItemImageButton,
.listItemButton,
.headerButton,
.paper-icon-button-light,
.innerCardFooter,
.blurhash-canvas,
.actionSheetMenuItem:hover,
.dialog {
  border-radius: var(--rounding) !important;
}

.dialog {
  background-color: rgb(20, 20, 20);
  overflow: auto !important;
}

.formDialogContent {
  height: 100%;
}

/* Top menu transparency */

.skinHeader {
  background: linear-gradient(
    to bottom,
    rgb(5, 5, 5),
    rgb(20, 20, 20)
  ) !important;
}

.skinHeader.focuscontainer-x.skinHeader-withBackground.skinHeader-blurred.semiTransparent {
  background: linear-gradient(
    to bottom,
    rgb(20, 20, 20),
    transparent
  ) !important;
  box-shadow: none !important;
  transform: none !important;
}

.skinHeader.focuscontainer-x.skinHeader-withBackground.skinHeader-blurred.headroom:not(.noHomeButtonHeader) {
  background: linear-gradient(
    to bottom,
    rgba(20, 20, 20),
    transparent
  ) !important;
  transform: none !important;
}

.upNextDialog {
  box-shadow: 0 0 8px 5px black;
}

.upNextDialog-poster-img {
  border-radius: var(--rounding);
}

/*Minimalistic play buttons*/

.cardOverlayFab-primary {
  background-color: #00000000;
}

.cardOverlayButtonIcon {
  background-color: #00000000 !important;
}

.cardOverlayContainer {
  background-color: rgba(0, 0, 0, 0.4);
  border-radius: 5px 5px 0px 0px !important;
}

/*Theme some dialogues*/

.actionSheetMenuItem:hover {
  background-color: rgba(0, 164, 220, 0.2);
}

.mainDrawer,
.mainDrawer.drawer-open {
  box-shadow: none !important;
  background: transparent;
}

.navMenuOption {
  position: relative;
  border-radius: var(--rounding) !important;
  grid-gap: 5px;
}

.navMenuOption:hover {
  background: transparent;
  margin-left: 10px !important;
}

.navMenuOption::before {
  content: "";
  width: 5px;
  height: 1.5em;
  background: var(--accent);
  display: block;
  flex: 0 0 auto;
  border-radius: 10px;
  opacity: 0;
  transition: 0.2s;
}

.navMenuOption:hover:before {
  opacity: 1;
  height: 1.5em !important;
}

.navMenuOption-selected::before {
  opacity: 1;
  height: 2em;
}

.navMenuOption-selected {
  background: transparent !important;
}

.dialogContainer .card {
  background: #000 !important;
  transform: none !important;
}

.dailogContainer .cardText {
  opacity: 1 !important;
}

.dialogContainer .cardText {
  opacity: 1;
}

.dialogContainer .vertical-wrap {
  width: 100% !important;
}

.cardFooter .cardText {
  opacity: 1;
}

/*Episode cards*/

.listItem[data-type="Audio"] .mediaInfoItem::after {
  display: none !important;
}

.listItem[data-type="Audio"] .listItem-indexnumberleft {
  padding-left: 5px;
}
/* ... */

